fixtures/valid/python-public-import/src/consumer/public.py
from producer.public import exposed as _exposed


def used():
    return _exposed()
