fixtures/invalid/python-private-import/src/producer/internal.py
def exposed():
    return True


def hidden():
    return False
